# scrape-and-sense

./: Analysis.csv  Analysis.py  Analysis_Details.md  Input.csv  LICENSE  README.MD  check.py  final_output.csv  instructions.md  main.py  output.py  pyproject.toml  requirements.txt  rmv_StopWords.py
Runnables/: check.py  function.py  main.py  output.py  rmv_StopWords.py
Stop Words/: Stop_words_all.txt
text_files/: 28292.8.txt  38452.4.txt  41685.0.txt  42146.8.txt  42608.6.txt  43070.4.txt  43532.2.txt  43994.0.txt  44455.8.txt  44917.6.txt  45379.4.txt  45841.2.txt  46303.0.txt  46764.8.txt  47226.6.txt  47688.4.txt  48150.2.txt  48612.0.txt  49073.8.txt  49535.6.txt  49997.4.txt  50459.2.txt  50921.0.txt  51382.8.txt  51844.6.txt  52306.4.txt  52768.2.txt
updated_text_files/: 10282.6.txt  10744.4.txt  11206.2.txt  12129.8.txt  123.0.txt  12591.6.txt  13053.4.txt  13515.2.txt  13977.0.txt  14438.8.txt  14900.6.txt  15362.4.txt  15824.2.txt  16286.0.txt  16747.8.txt  17209.6.txt  18133.2.txt  18595.0.txt  19056.8.txt  19518.6.txt  19980.4.txt  20442.2.txt  20904.0.txt  21365.8.txt  21827.6.txt  22289.4.txt  22751.2.txt  23213.0.txt  2345.0.txt  23674.8.txt  24136.6.txt  24598.4.txt  25060.2.txt  25522.0.txt  25983.8.txt  26445.6.txt  26907.4.txt  27369.2.txt  27831.0.txt  28292.8.txt  (+71 more)
